changed the attendance method in the student to return appropriate format